--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ nav{
 }
 
 /*##################################### Start About #####################################*/
-#about{  
+#about{
     .about-image{
         img{
             box-shadow: 0 0 25px var(--mian-color);
@@ -182,16 +182,12 @@ nav{
                 width: 95% !important;
             }
         }
-
     }
     .about-content{
         .info{
             h1{
                 font-weight: 700;
                 font-size: 5rem;
-            }
-            h3{
-                font-size: 3rem;
             }
             span{
                 color: var(--mian-color);
@@ -200,6 +196,24 @@ nav{
                 font-size: 34px;
                 font-weight: 600;
                 min-width: 280px;
+            }
+            @media (max-width:992px) {
+                .text-animated{
+                    font-size: 24px !important;
+                }
+            }
+            @media (max-width:767px) {
+                .text-animated{
+                    font-size: 34px !important;
+                }
+            }
+            @media (max-width:487px) {
+                h1{
+                    font-size: 2.8rem;
+                }
+                .text-animated{
+                    font-size: 20px !important;
+                }
             }
         }
         .social-icons{
@@ -227,11 +241,10 @@ nav{
             }
         }
     }
-
-    
 }
 /*##################################### Start Projects #####################################*/
 #project{
+    background-color: var(--second-bg-color);
     .slide-project{
         height: 300px;
     }
@@ -261,14 +274,51 @@ nav{
     }
 }
 
+/*##################################### Start Skills #####################################*/
+#skills{
+    .skill-box{
+        box-shadow: 0 0 25px var(--mian-color);
+        i{
+            font-size: 60px;
+        }
+        .fa-html5{
+            color: #F16A30;
+        }
+        .fa-css3-alt{
+            color: #439ED9;
+        }
+        .fa-js{
+            color: #FFE008;
+        }
+        .fa-angular{
+            color: #de0837;
+            background-color: #fff;
+        }
+        .fa-sass{
+            color: #D2679E;
+        }
+        .fa-bootstrap{
+            color: #8A18FD;
+            background-color: #fff;
+        }
+        @media (max-width: 768px) {
+            img{
+                width: 70px !important;
+            }
+        }
+    }
+    .skill-box:hover i, .skill-box:hover img{
+        transform: scale(1.3)rotate(10deg);
+    }
+    .skill-box:hover h4{
+        transform: scale(1.2);
+    }
+}
+
 /*##################################### Start Education #####################################*/
 #education{
     background-color: var(--second-bg-color) !important;
     overflow: hidden;
-    h2{
-        font-size: 3rem;
-        text-align: center;
-    }
     .timeline-items{
         max-width: 1200px;
         margin: auto;
