--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,10 @@ nav{
         img{
             box-shadow: 0 0 25px var(--mian-color);
             cursor: pointer;
+            border-top-left-radius: 50%;
+            border-bottom-right-radius: 50%;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
         }
         img:hover{
             box-shadow: 0 0 25px var(--mian-color),
@@ -174,12 +178,12 @@ nav{
         }
         @media (max-width:768px) {
             img{
-                width: 80% !important;
+                width: 70% !important;
             }
         }
         @media (max-width:568px) {
             img{
-                width: 95% !important;
+                width: 70% !important;
             }
         }
     }
@@ -307,6 +311,9 @@ nav{
             }
         }
     }
+    .skill-box:hover{
+        transform: scale(0.9);
+    }
     .skill-box:hover i, .skill-box:hover img{
         transform: scale(1.3)rotate(10deg);
     }
@@ -426,7 +433,6 @@ nav{
     }
 }
 
-
 /*##################################### Start Contact #####################################*/
 #contact{
     background-color: var(--bg-color);
@@ -535,7 +541,6 @@ nav{
     }
 }
 
-
 /*##################################### Start Footer #####################################*/
 footer{
     background-color: var(--second-bg-color);
@@ -581,8 +586,6 @@ footer{
         
     }
 }
-
-
 
 @media (max-width:576px) {
     html{
